--- a/_data/workshop_navigation.yml
+++ b/_data/workshop_navigation.yml
@@ -5,6 +5,9 @@ docs:
   url: workshop.html
  
 - title: Presentations
+  url: presentations.html
+
+- title: Participating Groups
   url: groups.html
 
 - title: Schedule
