--- a/_data/workshop_navigation.yml
+++ b/_data/workshop_navigation.yml
@@ -4,7 +4,7 @@ docs:
 - title: MURI Home
   url: index.html
 
-- title: Worshop Home
+- title: Workshop Home
   url: workshop.html
  
 - title: Presentations
