--- a/_data/workshop_navigation.yml
+++ b/_data/workshop_navigation.yml
@@ -13,8 +13,8 @@ docs:
 - title: Participating Groups
   url: groups.html
 
-- title: Schedule
-  url: schedule.html
+- title: DEM Literature
+  url: DEM_Lit.html
 
 - title: Contact Us
   url: contact_us.html
