Add undergrad research page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@ docs:
   
 - title: Projects
   url: projects.html
+
+- title: Undergrad Research
+  url: undergrads.html
   
 - title: Publications
   url: publications.html
