--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,9 @@ docs:
 - title: Talks
   url: talks.html
 
+- title: Gonzalo's secrets
+  url: secrets.html
+
 - title: Software/Data
   url: software-data.html
  
